# gsmod

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DOCUMENTATION_VALIDATION_REPORT.md  README.md  VALIDATION_REPORT.md  debug_diff.py  pyproject.toml  ruff_errors.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PRE_COMMIT_SETUP.md  WORKFLOWS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  build.yml  publish.yml  test.yml
benchmarks/: README.md  benchmark_color.py  benchmark_color_optimization.py  benchmark_contiguous.py  benchmark_default_skip.py  benchmark_format_aware.py  benchmark_gpu.py  benchmark_gpu_simple.py  benchmark_gpu_vs_cpu.py  benchmark_gsdata_cpu.py  benchmark_gsdata_improvements.py  benchmark_gsply_integration.py  benchmark_integration_simple.py  benchmark_learnable.py  benchmark_learnable_cpu.py  benchmark_new_operations.py  benchmark_real_data.py  benchmark_rotation_repr.py  benchmark_sh_color.py  benchmark_transform.py  benchmark_triton.py  run_all_benchmarks.py  test_optimizations.py
benchmarks/archive/: README.md  analyze_color_bottlenecks.py  analyze_cpu_bottlenecks.py  analyze_further_optimizations.py  analyze_ultra_optimization.py  benchmark_color.py  benchmark_color_fused.py  benchmark_comprehensive.py  benchmark_cpu_ultra_fused.py  benchmark_final_comparison.py  benchmark_final_optimizations.py  benchmark_pure_numpy_api.py  benchmark_ultra_optimizations.py  color_optimization_analysis.py  debug_color_difference.py  debug_fused_performance.py  debug_specific_pixels.py  profile_real_bottleneck.py  verify_color_fused_correctness.py  verify_ultra_optimizations_correctness.py
docs/: CHANGELOG.md  GPU_API_REFERENCE.md
docs/source/: changelog.md  conf.py  index.rst  overview.md  usage.md
docs/source/_static/: custom.css
docs/source/api/: color.rst  compose.rst  config_values.rst  filter_utils.rst  gsdata_pro.rst  histogram.rst  index.rst  learnable.rst  params.rst  presets.rst  torch.rst  (+3 more)
examples/: filtering_usage.py
gsmod-0.1.2/tests/: test_skip_logic.py
src/gsmod/: __init__.py  compose.py  constants.py  gsdata_pro.py  params.py  pipeline.py  processing.py  protocols.py  utils.py  validators.py  verification.py
tests/: test_color_pipeline.py  test_compose.py  test_comprehensive_pathways.py  test_config_values.py  test_copy_on_write.py  test_equivalence.py  test_filter_api.py  test_filter_atomic.py  test_format_handling.py  test_gpu.py  test_gsdata_pro.py  test_histogram.py  test_histogram_learning.py  test_learnable.py  test_numba_kernels.py  test_parameterized_pipelines.py  test_pipeline_cpu.py  test_skip_logic.py  test_transform_pipeline.py  test_transforms_numpy.py  test_validators.py
(+49 files in other folders)
