[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsmod"
version = "0.1.1"
description = "Ultra-fast CPU processing for 3D Gaussian Splatting (color, transform, filter, opacity)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "OpsiClear" }
]
keywords = [
    "gaussian-splatting",
    "3d-graphics",
    "computer-vision",
    "lut",
    "color-grading"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]

dependencies = [
    "numpy>=1.24.0",
    "numba>=0.59.0",
    "gsply>=0.2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
torch = [
    "torch>=2.0.0",
]
docs = [
    "sphinx>=7.2",
    "myst-parser>=2.0",
    "furo>=2024.0.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://github.com/OpsiClear/gsmod"
Repository = "https://github.com/OpsiClear/gsmod"
Issues = "https://github.com/OpsiClear/gsmod/issues"
Documentation = "https://github.com/OpsiClear/gsmod#readme"

[tool.setuptools]
packages = ["gsmod", "gsmod.color", "gsmod.config", "gsmod.filter", "gsmod.histogram", "gsmod.opacity", "gsmod.shared", "gsmod.torch", "gsmod.transform"]
package-dir = {"" = "src"}
zip-safe = true

[tool.setuptools.package-data]
gsmod = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=gsmod",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # Line too long
    "N803",  # Allow uppercase argument names (R for rotation matrix)
    "N806",  # Allow uppercase variable names (R for rotation matrix)
    "N812",  # Allow lowercase imports as uppercase (e.g., 'import torch.nn.functional as F')
]

[tool.ruff.lint.per-file-ignores]
"benchmarks/archive/*.py" = ["E402"]  # Allow mid-file imports in archived debug scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
